data/usersCode/anm11/question1/error.txt
  File "data/usersCode/anm11/question1/code4.py", line 2
    print("Hello)
                ^
SyntaxError: EOL while scanning string literal
